# tron-pomodoro

./: .gitignore  CLAUDE.md  README.md  build_deb.sh  generate_sounds.py  install.sh  pyproject.toml  tron-pomodoro.desktop.template  tron_pomodoro.py
